set up API and currency pairs

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p>This is main contents of the site</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="border mt-4 p-5 rounded">
+                <p>currency pair: &euro;/&#36;</p>
+                <p id="eur"></p>
+                <p id="usd"></p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
