--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block style %}
     {% endblock %}
@@ -13,7 +14,11 @@
 
 <body>
     <header>
-        <h2>Main header of the site</h2>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Overview</a>
+            </li>
+        </ul>
     </header>
 
     <!-- flash messages -->
@@ -26,10 +31,11 @@
         {% endblock %}
     </main>
 
-    <footer>
+    <footer class="footer fixed-bottom">
         <p>main footer of the site</p>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block script %}
     {% endblock %}
