added function to check and count increase/decrease

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col">
             <div class="border mt-4 p-5 rounded">
-                <h3>{{ total_sum }}</h3>
+                <h3>{{ capital }}</h3>
                 <p>currency pair: &euro;/&#36;</p>
                 <div class="panel-body table-responsive">
                     <table class="table table-bordered">
